# winservice-manager

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: stop-service.ps1
tests/: test_manage_services.py  test_setup_schtasks.py
winservice_manager/: __init__.py  manage_services.py  setup_schtasks.py  utils.py
winservice_manager/scripts/: start-service.ps1  stop-service.ps1
