[tool.poetry]
authors = ["Dav <50445297+geodesyMUC@users.noreply.github.com>"]
description = "Scripts for managing Windows Services, using scheduled tasks"
name = "winservice-manager"
version = "0.1.0"

[tool.poetry.scripts]
create-schtasks = "winservice_manager.setup_schtasks:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pylint = "^2.14.5"
pytest = "^5.2"

[tool.black]
line-length = 88

[tool.pylint.basic]
good-names = ["f"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
