[tool.poetry]
authors = ["Dav <50445297+geodesyMUC@users.noreply.github.com>"]
description = "Scripts for managing Windows Services, using scheduled tasks"
name = "winservice-manager"
version = "0.6.0a0"

[tool.poetry.scripts]
create-schtasks = "winservice_manager.setup_schtasks:main"
start-winservice = "winservice_manager.manage_services:cmd_start_service"
stop-winservice = "winservice_manager.manage_services:cmd_stop_service"

[tool.poetry.dependencies]
colorama = "^0.4.5"
psutil = "^5.9.1"
python = "^3.9"
pywin32 = "^304"
types-colorama = "^0.4.15"
types-psutil = "^5.9.5"
typing-extensions = "^4.3.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pylint = "^2.14.5"
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[tool.black]
line-length = 88

[tool.pylint.basic]
good-names = ["f"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
